Upgrade to current Gradle (9.3.1), Kotlin (2.3.10) and Java LTS (25) version.